kubernetes/apps/awx/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: awx
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: awx-automation-job
  namespace: awx
spec:
  podSelector:
    matchExpressions:
      - key: ansible-awx
        operator: Exists
      - key: ansible-awx-job-id
        operator: Exists
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - port: 22
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: awx-task
  namespace: awx
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: awx-task
      app.kubernetes.io/part-of: awx
  policyTypes:
    - Ingress
    - Egress
  ingress: []
  egress:
    - to:
        - podSelector:
            matchLabels:
              cnpg.io/cluster: awx-postgres-v18
      ports:
        - port: 5432
          protocol: TCP
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: awx-web
              app.kubernetes.io/part-of: awx
      ports:
        - port: 8052
          protocol: TCP
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: gotify
          podSelector:
            matchLabels:
              app.kubernetes.io/name: gotify-gotify
      ports:
        - port: 80
          protocol: TCP
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
    - to: # For project-sync
      - ipBlock:
          cidr: 0.0.0.0/0
          except:
          - "${HAPROXY_WHITELIST}"
      ports:
        - port: 443
          protocol: TCP
    - to: # For onprem project-sync
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: forgejo
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: forgejo-forgejo
              app.kubernetes.io/name: forgejo
      ports:
        - port: 22
          protocol: TCP
        - port: 2222
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: awx-web
  namespace: awx
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: awx-web
      app.kubernetes.io/part-of: awx
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: haproxy-controller
          podSelector:
            matchLabels:
              app.kubernetes.io/name: kubernetes-ingress
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: awx-task
              app.kubernetes.io/part-of: awx
      ports:
        - port: 8052
  egress:
    - to:
        - podSelector:
            matchLabels:
              cnpg.io/cluster: awx-postgres-v18
      ports:
        - port: 5432
          protocol: TCP
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: pocket-id
          podSelector:
            matchLabels:
              app.kubernetes.io/controller: pocket-id
              app.kubernetes.io/instance: pocket-id-pocket-id
              app.kubernetes.io/name: pocket-id-pocket-id
      ports:
        - port: 8081
          protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: awx-controller-manager
  namespace: awx
spec:
  endpointSelector:
    matchLabels:
      control-plane: controller-manager
      helm.sh/chart: awx-operator
  egress:
    - toEntities:
      - kube-apiserver
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: awx-task
  namespace: awx
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: awx-task
      app.kubernetes.io/part-of: awx
  egress:
    - toEntities:
      - kube-apiserver
